--- a/module2-solution/css/stylesheet.css
+++ b/module2-solution/css/stylesheet.css
@@ -185,7 +185,7 @@ h1 {
 	position: relative;
     padding-right: 10px;
 	padding-left: 10px;
-	background-color: #AFF78A;
+	background-color: #8AF7A3;
 	border: 3px solid black;
 	margin: 10px;
 	display: flex;
@@ -212,11 +212,11 @@ h1 {
 }
 #section2
 {
-	background-color: #FFC93F;
+	background-color: #F7BE8A;
 }
 #section3
 {
-	background-color: #E2B0AC;
+	background-color: #A3E2F9;
 }
 .content
 {
